hphp/hack/test/typecheck/inout/bad_inout_decl_variadic.php
<?hh // strict

function test(inout int ...$args): void {}
